--- a/Changes
+++ b/Changes
@@ -1,9 +1,15 @@
 #
-# $Id: Changes,v 0.11 2014/01/20 20:39:54 dankogai Exp dankogai $
+# $Id: Changes,v 0.12 2014/04/16 10:49:36 dankogai Exp dankogai $
 #
 # Revision history for Revision history for URI-Escape-XS
 #
-$Revision: 0.11 $ $Date: 2014/01/20 20:39:54 $
+$Revision: 0.12 $ $Date: 2014/04/16 10:49:36 $
+! XS.xs
++ t/06-nonstr.t
+  Addressed: RT#94793: encodeURIComponent can't encode integer values
+  https://rt.cpan.org/Ticket/Display.html?id=94793
+
+0.11 2014/01/20 20:39:54
 ! t/03-hashu.t
   No longer skips tests 4-6 for Test::Harness->VERSION > 3
 ! Makefile.PL
